[project]
name = "streamlit-elements-fte"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fteutsch", email = "fteutsch@inovex.de" }
]
dependencies = [
    "streamlit>1.34.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["streamlit_elements"]
